--- a/setStyles.css
+++ b/setStyles.css
@@ -9,19 +9,22 @@ header {
     text-align: center;
     background: #373737;
     color: #eee;
+    height: 10vh;
+    padding-top: 2%;
 }
 
 section {
     height: 50vh;
     width: 30vw;
     margin: auto;
-    border: 1px solid #000;
-    display: flex;
+    border: 3px solid #000;
+    background: #eeedeb;
+    border-radius: 5px;    
 }
 
-section > span {    
+section  span {    
     border-radius: 50%;
     height: 80px;
     width: 80px;
-    background: #c6c6c6;
+    background: #000;
 }
